AdvancedNetworkSpecialist/72_TransitGatewayRestrictedRouting/72_SecurityGroups.yaml
---
AWSTemplateFormatVersion: "2010-09-09"
Description:  This template create all Security Groups

Parameters:
  # Global parameters
  Bucket:
    Description: "CloudFormation bucket URL"
    Type: String
    Default: "hawkfund-cloudformation"
  BucketKey:
    Description: Key to find object in the bucket
    Type: String
    Default: "72_TransitGatewayRestrictedRouting"
  BucketObject:
    Description: "File to store data in the bucket"
    Type: String
    Default: "Data.json"
  EnvironmentName:
    Description: "Environment name that prefix all resources"
    Type: String
    Default: "dev"
    AllowedValues:
      - "dev"
      - "test"
      - "prod"
    ConstraintDescription: Must specify dev, test or prod
  ProjectName:
    Description: "Project name that prefix all resources"
    Type: String
    Default: "ANS"
  SaveInS3File:
    AllowedValues: [ "false", "true" ]
    Default: "false"
    Description: "Save resources information in s3 file"
    Type: String

  # Stack parameters
  BastionInstanceVpcId:
    Type: String
  BastionInstanceIngressCidrIp:
    Default: "0.0.0.0/0"
    Type: String
  ApplicationInstanceVpcIds:
    Type: String
  ApplicationInstanceIngressCidrIp:
    Default: "10.0.0.0/8"
    Type: String

Conditions:
  saveInS3File: !Equals [ !Ref SaveInS3File, "true"]

Resources:
  BastionInstanceSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: "Security Group for Bastion"
      GroupName: "BastionInstanceSecurityGroup"
      SecurityGroupIngress:
        - CidrIp: !Ref BastionInstanceIngressCidrIp
          FromPort: -1
          IpProtocol: icmp
          ToPort: -1
        - CidrIp: !Ref BastionInstanceIngressCidrIp
          FromPort: 22
          IpProtocol: tcp
          ToPort: 22
      Tags:
        - Key: Name
          Value:  !Sub "${ProjectName}-${EnvironmentName}-Bastion-SG"
      VpcId: !Ref BastionInstanceVpcId

  BastionInstanceSecurityGroupToS3:
    Type: AWS::CloudFormation::CustomResource
    Condition: saveInS3File 
    DeletionPolicy: Retain
    UpdateReplacePolicy: Retain
    Properties:
      ServiceToken: !Join [ ":", [ "arn:aws:lambda", !Sub "${AWS::Region}", !Sub "${AWS::AccountId}", "function:EC2ResourceToS3"]]
      ServiceTimeout: 60
      Bucket: !Ref Bucket
      BucketKey: !Ref BucketKey
      BucketObject: !Ref BucketObject
      Region: !Ref AWS::Region
      ResourceType: "SecurityGroup"
      Key: !Sub "${AWS::Region}:${ProjectName}:${EnvironmentName}:EC2:SecurityGroup:Bastion"
      Value: !Ref BastionInstanceSecurityGroup

  ApplicationASecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: "Security Group for A Application"
      GroupName: "ApplicationASecurityGroup"
      SecurityGroupIngress:
        - CidrIp: !Ref ApplicationInstanceIngressCidrIp
          FromPort: -1
          IpProtocol: icmp
          ToPort: -1
        - CidrIp: !Ref ApplicationInstanceIngressCidrIp
          FromPort: 22
          IpProtocol: tcp
          ToPort: 22
        - CidrIp: !Ref ApplicationInstanceIngressCidrIp
          FromPort: 80
          IpProtocol: tcp
          ToPort: 80
      Tags:
        - Key: Name
          Value:  !Sub "${ProjectName}-${EnvironmentName}-A-Application-SG"
      VpcId: !Select [ 0, !Split [ ",", !Ref ApplicationInstanceVpcIds ] ]

  ApplicationASecurityGroupToS3:
    Type: AWS::CloudFormation::CustomResource
    Condition: saveInS3File 
    DeletionPolicy: Retain
    UpdateReplacePolicy: Retain
    Properties:
      ServiceToken: !Join [ ":", [ "arn:aws:lambda", !Sub "${AWS::Region}", !Sub "${AWS::AccountId}", "function:EC2ResourceToS3"]]
      ServiceTimeout: 60
      Bucket: !Ref Bucket
      BucketKey: !Ref BucketKey
      BucketObject: !Ref BucketObject
      Region: !Ref AWS::Region
      ResourceType: "SecurityGroup"
      Key: !Sub "${AWS::Region}:${ProjectName}:${EnvironmentName}:EC2:SecurityGroup:ApplicationA"
      Value: !Ref ApplicationASecurityGroup

  ApplicationBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: "Security Group for BApplication"
      GroupName: "ApplicationBSecurityGroup"
      SecurityGroupIngress:
        - CidrIp: !Ref ApplicationInstanceIngressCidrIp
          FromPort: -1
          IpProtocol: icmp
          ToPort: -1
        - CidrIp: !Ref ApplicationInstanceIngressCidrIp
          FromPort: 22
          IpProtocol: tcp
          ToPort: 22
        - CidrIp: !Ref ApplicationInstanceIngressCidrIp
          FromPort: 80
          IpProtocol: tcp
          ToPort: 80
      Tags:
        - Key: Name
          Value:  !Sub "${ProjectName}-${EnvironmentName}-B-Application-SG"
      VpcId: !Select [ 1, !Split [ ",", !Ref ApplicationInstanceVpcIds ] ]

  ApplicationBSecurityGroupToS3:
    Type: AWS::CloudFormation::CustomResource
    Condition: saveInS3File 
    DeletionPolicy: Retain
    UpdateReplacePolicy: Retain
    Properties:
      ServiceToken: !Join [ ":", [ "arn:aws:lambda", !Sub "${AWS::Region}", !Sub "${AWS::AccountId}", "function:EC2ResourceToS3"]]
      ServiceTimeout: 60
      Bucket: !Ref Bucket
      BucketKey: !Ref BucketKey
      BucketObject: !Ref BucketObject
      Region: !Ref AWS::Region
      ResourceType: "SecurityGroup"
      Key: !Sub "${AWS::Region}:${ProjectName}:${EnvironmentName}:EC2:SecurityGroup:ApplicationB"
      Value: !Ref ApplicationBSecurityGroup

  ApplicationCSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: "Security Group for C Application"
      GroupName: "ApplicationCSecurityGroup"
      SecurityGroupIngress:
        - CidrIp: !Ref ApplicationInstanceIngressCidrIp
          FromPort: -1
          IpProtocol: icmp
          ToPort: -1
        - CidrIp: !Ref ApplicationInstanceIngressCidrIp
          FromPort: 22
          IpProtocol: tcp
          ToPort: 22
        - CidrIp: !Ref ApplicationInstanceIngressCidrIp
          FromPort: 80
          IpProtocol: tcp
          ToPort: 80
      Tags:
        - Key: Name
          Value:  !Sub "${ProjectName}-${EnvironmentName}-C-Application-SG"
      VpcId: !Select [ 2, !Split [ ",", !Ref ApplicationInstanceVpcIds ] ]

  ApplicationCSecurityGroupToS3:
    Type: AWS::CloudFormation::CustomResource
    Condition: saveInS3File 
    DeletionPolicy: Retain
    UpdateReplacePolicy: Retain
    Properties:
      ServiceToken: !Join [ ":", [ "arn:aws:lambda", !Sub "${AWS::Region}", !Sub "${AWS::AccountId}", "function:EC2ResourceToS3"]]
      ServiceTimeout: 60
      Bucket: !Ref Bucket
      BucketKey: !Ref BucketKey
      BucketObject: !Ref BucketObject
      Region: !Ref AWS::Region
      ResourceType: "SecurityGroup"
      Key: !Sub "${AWS::Region}:${ProjectName}:${EnvironmentName}:EC2:SecurityGroup:ApplicationC"
      Value: !Ref ApplicationASecurityGroup

Outputs:
  BastionInstanceSecurityGroupId:
    Description: "Security GroupId for the Bastion"
    Value: !GetAtt BastionInstanceSecurityGroup.GroupId
  ApplicationInstanceSecurityGroupIds:
    Description: "Security GroupIds for the Application"
    Value: !Join [",", [!GetAtt ApplicationASecurityGroup.GroupId, !GetAtt ApplicationBSecurityGroup.GroupId, !GetAtt ApplicationCSecurityGroup.GroupId]]
